working version, needs cleanups

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Client Ethereum React App",
-  "name": "Client Ethereum React App",
+  "short_name": "Multisignature Wallet",
+  "name": "Multisignature Wallet",
   "icons": [
     {
       "src": "favicon.ico",
