--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,5 @@
 GENERATE_SOURCEMAP=false
+ALCHEMY_ID="xxxxx"
 REACT_APP_RINKEBY_URL="https://eth-rinkeby.alchemyapi.io/v2/your-api-key"
-REACT_APP_KOVAN_URL="https://eth-kovan.alchemyapi.io/v2/your-api-key"
 REACT_APP_GRAPH_URL="https://api.studio.thegraph.com/query/24949/greetergraph/0.0.4"
 #REACT_APP_GRAPH_URL="https://api.studio.thegraph.com/query/24949/mytoken/0.0.4
-export ALCHEMY_ID="xxxxx"
